--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "commonjs",
   "dependencies": {
     "googleapis": "^121.0.0",
-    "busboy": "^1.6.0",
+    "formidable": "^3.6.4",
     "firebase-admin": "^12.0.0"
   },
   "engines": {
