--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Frontend HTML + Backend API untuk Vercel",
   "type": "commonjs",
   "dependencies": {
-    "googleapis": "^121.0.0",
     "formidable": "^3.5.4",
-    "firebase-admin": "^12.0.0"
+    "firebase-admin": "^12.0.0",
+    "axios": "^1.7.9"
   },
   "engines": {
     "node": "22.x"
