--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "1.0.0",
   "description": "Frontend HTML + Backend API untuk Vercel",
   "type": "commonjs",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
-    "formidable": "^3.5.4",
+    "express": "^4.21.0",
+    "body-parser": "^1.20.2",
     "firebase-admin": "^12.0.0",
     "axios": "^1.7.9"
   },
